Changelog
=========

1.1 (unreleased)
----------------

- Avoid creating a session if there doesn't exist one yet.
  Accessing REQUEST.SESSION causes a _ZopeID cookie to be created, therefore
  we use the browser_id_manager to check first if a session already exists.

- Removed language specific subjects for order mails from settings and handle
  translation with i18n.


1.0 (2011-02-25)
----------------

- Initial release.