@@ -2,8 +2,11 @@
 """
 
 from Acquisition import aq_parent
-from Products.ATContentTypes.content.document import ATDocument
-from Products.ATContentTypes.content.document import ATDocumentSchema
+from Products.Archetypes import atapi
+from Products.ATContentTypes.content.base import ATCTContent
+from Products.ATContentTypes.content.schemata import ATContentTypeSchema
+from Products.ATContentTypes.configuration import zconf
+
 from zope.interface import implements, alsoProvides
 from zope.lifecycleevent import ObjectRemovedEvent
 
@@ -16,11 +19,26 @@ else:
 from ftw.shop.interfaces import IShopItem, IBuyable
 from ftw.shop.content.categorizeable import Categorizeable
 from ftw.shop.config import PROJECTNAME
+from ftw.shop import shopMessageFactory as _
 
-ShopItemSchema = ATDocumentSchema.copy()
+
+ShopItemSchema = ATContentTypeSchema.copy() + atapi.Schema((
+    atapi.TextField('text',
+        required=False,
+        searchable=True,
+        primary=True,
+        storage=atapi.AnnotationStorage(migrate=True),
+        default_output_type='text/x-html-safe',
+        widget=atapi.RichWidget(
+            description='',
+            label=_(u'label_body_text', default=u'Body Text'),
+            rows=25,
+            allow_file_upload = zconf.ATDocument.allow_document_upload),
+        ),
+))
 
 
-class ShopItem(Categorizeable, ATDocument):
+class ShopItem(Categorizeable, ATCTContent):
     """A simple shop item"""
     implements(IShopItem)
     alsoProvides(IBuyable)
